// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependencies adds dependencies 1`] = `
{
  "@react-navigation/native": {
    "handle": "snackager-1/@react-navigation~native@5.1.1",
    "peerDependencies": {
      "react": "*",
      "react-native": "*",
    },
    "version": "5.1.1",
  },
  "expo-font": {
    "version": "8.1.0",
    "wantedVersion": "~14.0.11",
  },
  "react-native-paper": {
    "handle": "snackager-1/react-native-paper@3.10.1",
    "peerDependencies": {
      "@expo/vector-icons": null,
      "react": "*",
      "react-native": "*",
    },
    "version": "3.10.1",
  },
}
`;

exports[`dependencies does not resolve * when disabled 1`] = `
{
  "expo-constants": {
    "version": "*",
  },
}
`;

exports[`dependencies fails on incomplete scoped names 1`] = `[Error: Invalid dependency '@scopeonly' (name can only contain URL-friendly characters)]`;

exports[`dependencies fails on invalid dependency name 1`] = `[Error: Invalid dependency '+-/.' (name can only contain URL-friendly characters)]`;

exports[`dependencies fails on invalid dependency version 1`] = `[Error: Invalid dependency 'expo' (version '-- 2 4' is not a valid semver)]`;

exports[`dependencies ignores resolved dependencies 1`] = `
{
  "expo-firebase-analytics": {
    "handle": "snackager-1/expo-firebase-analytics@8.1.0",
    "version": "8.1.0",
  },
}
`;

exports[`dependencies loads peer dependencies 1`] = `
{
  "mobx": "^4.0.0",
}
`;

exports[`dependencies loads peer dependencies 2`] = `
{
  "mobx": {
    "dependents": [
      "firestorter",
    ],
    "wantedVersion": "^4.0.0",
  },
}
`;

exports[`dependencies removes dependencies 1`] = `
{
  "@react-navigation/native": {
    "handle": "snackager-1/@react-navigation~native@5.1.1",
    "peerDependencies": {
      "react": "*",
      "react-native": "*",
    },
    "version": "5.1.1",
  },
  "react-native-paper": {
    "handle": "snackager-1/react-native-paper@3.10.1",
    "peerDependencies": {
      "@expo/vector-icons": null,
      "react": "*",
      "react-native": "*",
    },
    "version": "3.10.1",
  },
}
`;

exports[`dependencies reports missing peer dependencies 1`] = `
{
  "@react-native-community/masked-view": {
    "dependents": [
      "@react-navigation/stack",
    ],
    "wantedVersion": "^0.1.0",
  },
  "@react-navigation/native": {
    "dependents": [
      "@react-navigation/stack",
      "@react-navigation/drawer",
    ],
    "wantedVersion": "5.0.6",
  },
  "react-native-gesture-handler": {
    "dependents": [
      "@react-navigation/stack",
      "@react-navigation/drawer",
    ],
    "wantedVersion": "~2.28.0",
  },
  "react-native-reanimated": {
    "dependents": [
      "@react-navigation/drawer",
    ],
    "wantedVersion": "~4.1.1",
  },
  "react-native-safe-area-context": {
    "dependents": [
      "@react-navigation/stack",
      "@react-navigation/drawer",
    ],
    "wantedVersion": "~5.6.0",
  },
  "react-native-screens": {
    "dependents": [
      "@react-navigation/stack",
      "@react-navigation/drawer",
    ],
    "wantedVersion": "~4.16.0",
  },
}
`;

exports[`dependencies resolves * after enabling 1`] = `
{
  "expo-constants": {
    "version": "~18.0.13",
    "wantedVersion": "~18.0.13",
  },
}
`;

exports[`dependencies resolves * to wanted version 1`] = `
{
  "expo-constants": {
    "version": "~18.0.13",
    "wantedVersion": "~18.0.13",
  },
}
`;

exports[`dependencies resolves dependency 1`] = `
{
  "expo-firebase-analytics": {
    "handle": "snackager-1/expo-firebase-analytics@~7.1.1",
    "peerDependencies": {
      "react": "*",
      "react-native": "*",
    },
    "version": "~7.1.1",
  },
}
`;

exports[`dependencies resolves multiple dependencies 1`] = `
{
  "@react-navigation/native": {
    "handle": "snackager-1/@react-navigation~native@5.1.1",
    "peerDependencies": {
      "react": "*",
      "react-native": "*",
    },
    "version": "5.1.1",
  },
  "expo-font": {
    "version": "~10.0.4",
    "wantedVersion": "~14.0.11",
  },
  "react-native-paper": {
    "handle": "snackager-1/react-native-paper@3.10.1",
    "peerDependencies": {
      "@expo/vector-icons": null,
      "react": "*",
      "react-native": "*",
    },
    "version": "3.10.1",
  },
}
`;

exports[`dependencies succeeds on dependency name with subpath 1`] = `
{
  "react-native-gesture-handler/DrawerLayout": {
    "handle": "snackager-1/react-native-gesture-handler~DrawerLayout@1.6.0",
    "peerDependencies": {
      "react-native-gesture-handler": "1.6.0",
    },
    "version": "1.6.0",
    "wantedVersion": "~2.28.0",
  },
}
`;

exports[`dependencies updates preloaded module version when changing SDK version 1`] = `
{
  "expo-av": {
    "error": [Error: Failed to resolve dependency 'expo-av@~16.0.8' (Package 'expo-av@~16.0.8' not found in the registry)],
    "version": "~16.0.8",
    "wantedVersion": "~16.0.8",
  },
}
`;

exports[`dependencies updates preloaded module version when changing SDK version 2`] = `
{
  "expo-av": {
    "error": [Error: Failed to resolve dependency 'expo-av@~16.0.8' (Package 'expo-av@~16.0.8' not found in the registry)],
    "version": "~13.10.5",
    "wantedVersion": "~13.10.5",
  },
}
`;
